--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
-
-
+*{
+  font-family: ´Poppins´,sans-serif;
+}
 
 /* estilos generales de la pagina, se aplican a todas las paginas */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #222;
+    background-image: url(body.avif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 /* estilos que se agregan al emcabezado de la pagina */
@@ -49,20 +54,20 @@ section {
 }
 
 section h2 {
-    color: #84bb0c;
+    color: #fff;
 }
 
 section h3 {
-  color: #15f0b5;
+  color: #fff;
 }
 
 
 section p {
-    color: #bc8821;
+    color: #fff;
 }
 
 footer {
-    background-color: #333;
+    background-color: rgb(51, 51, 51);
     color: #fff;
     text-align: center;
     padding: 20px;
@@ -74,6 +79,7 @@ section.datos {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    width: 100%;
   }
   
   section.datos h2, section.datos img {
@@ -106,7 +112,6 @@ section.datos {
   section.datos ul li:nth-last-child(1) {
     margin-right: 0;
   }
-  
 
 
 
